--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <section class="wrapper main-menu">
             <div class="container">
                 <ul class="list-menu">
-                    <li><a href="#">ссылка 1</a></li>
+                    <li><a href="#">ссылка 1223121213321</a></li>
                     <li><a href="#">ссылка 2</a></li>
                     <li><a href="#">ссылка 5</a></li>
                 </ul>
