--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
                     <use xlink:href="images/sprite.svg#1-square-fill"></use>
                 </svg>
                 <img src="images/sprite.svg#airplane-engines" width="100px" alt="">
+                <p>asdasdasdasdasdas</p>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum est architecto aperiam. Dolore accusamus, mollitia excepturi est earum quia, in veniam repellendus minus doloribus saepe tenetur beatae ad nostrum pariatur?</div>
                 
             </div>
         </section>
