--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </section>
         <section class="wrapper banner">
             <div class="container">
-                banner
+                bannerфывфыв
                 <img src="../dist/images/sprite.svg#1" alt="">
                 <img src="images/1.jpg" alt="">
             </div>
