--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
         </section>
     </main>
     <footer class="footer">
+        <p>adsd</p>
         <section class="wrapper footer-menu">
             <div class="container">
                 подвал
